[package]
name = "roblox-pattern-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Threading", 
    "Win32_Foundation", 
    "Win32_System_ProcessStatus", 
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_Memory", 
    "Win32_Security", 
    "Win32_System_Diagnostics_ToolHelp"
] }
colored = "3.0"
thiserror = "2.0.11"
serde_json = "1.0.137"
